UP-3 fixed first slide background on firefox

--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -5,6 +5,7 @@ body {
     background-color:white;
 }
 .container{
+
     background-color:white;
     position:relative;
     padding:0;
@@ -31,9 +32,11 @@ body {
 	100% { background-position: 0 100vh; }
 }
 .movingBackground{
+
     position:relative;
     width:100%;
     height:100vh;
+    src: url(../images/background2.png) repeat-y center center fixed;
     background: url(../images/background2.png) repeat-y center center fixed;
     background-size: cover;
     animation: animatedBackground 20s linear infinite;
@@ -60,23 +63,31 @@ body {
 
 
 /* Slide2 */
-@-webkit-keyframes webcamBlur {
-    0% {-webkit-filter:grayscale(0) blur(0px) brightness(1);filter:grayscale(0) blur(0px) brightness(1);}
-    100% {-webkit-filter:grayscale(.8) blur(15px) brightness(.75);filter:grayscale(.8) blur(15px) brightness(.75);}
-}
 @keyframes webcamBlur {
     0% {-webkit-filter:grayscale(0) blur(0px) brightness(1);filter:grayscale(0) blur(0px) brightness(1);}
     100% {-webkit-filter:grayscale(.8) blur(15px) brightness(.75);filter:grayscale(.8) blur(15px) brightness(.75);}
 }
-/*overlay animation fades from hidden to visible and opacity from 0 to 1*/
-/*this animation is necessary since the box is centered using display table*/
-@-webkit-keyframes overlay {
-    0% { opacity:0;}
-    100% { opacity:1;}
+@-webkit-keyframes webcamBlur {
+    from {-webkit-filter:grayscale(0) blur(0px) brightness(1);filter:grayscale(0) blur(0px) brightness(1);}
+    to {-webkit-filter:grayscale(.8) blur(15px) brightness(.75);filter:grayscale(.8) blur(15px) brightness(.75); }
 }
+@-ms-keyframes webcamBlur {
+    from {filter:grayscale(0) blur(0px) brightness(1);}
+    to {filter:grayscale(.8) blur(15px) brightness(.75);}
+}
+/*overlay animation fades from opacity from 0 to 1*/
+/*this animation is necessary since the box is centered using display table and cannot be display none*/
 @keyframes overlay {
     0% { opacity:0;}
     100% { opacity:1;}
+}
+@-webkit-keyframes overlay {
+    from { opacity:0;}
+    to { opacity:1;}
+}
+@-ms-keyframes overlay {
+    from { opacity:0;}
+    to { opacity:1;}
 }
 
 
@@ -88,10 +99,8 @@ body {
     animation-delay: 2s; /* webcam blur delay */
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
-
     position:relative;
     width:100%;
-
 
 }
 
@@ -105,10 +114,7 @@ body {
     animation-delay: 4s; /* box fade in delay */
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
-
     opacity:0;
-
-
     display:table;
     color:#FAFCFA;
     min-height:300px;
